kuber/AppDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: otus-hw6
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: app-service
          image: shacoss/app-service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
              name: app-port
