kuber/DeliveryDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: otus-hw9
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: delivery
          image: shacoss/delivery-service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: delivery-port
