kuber/WarehouseDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-service
  namespace: otus-hw8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: warehouse-service
  template:
    metadata:
      labels:
        app: warehouse-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: warehouse
          image: shacoss/warehouse-service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: warehouse-port
