kuber/AppService.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-sv
  namespace: otus-hw6
spec:
  selector:
    app: app-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: app-port
  type: NodePort
