kuber/AuthService.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-sv
  namespace: otus-hw8
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: auth-port
  type: NodePort
