kuber/BillingService.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service-sv
  namespace: otus-hw10
spec:
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: billing-port
  type: NodePort
