kuber/DeliveryService.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service-sv
  namespace: otus-hw9
spec:
  selector:
    app: delivery-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: delivery-port
  type: NodePort
