kuber/NotificationService.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service-sv
  namespace: otus-hw10
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: not-port
  type: NodePort
