kuber/OrderService.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-sv
  namespace: otus-hw9
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: order-port
  type: NodePort
