kuber/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service-sv
spec:
  selector:
    app: health-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: health-port
  type: NodePort
