kuber/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  namespace: otus-hw8
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service-sv.otus-hw8.svc.cluster.local/auth/validate"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Email,X-UserId"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /billing
            pathType: Prefix
            backend:
              service:
                name: billing-service-sv
                port:
                  number: 80
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service-sv
                port:
                  number: 80
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service-sv
                port:
                  number: 80
          - path: /warehouse
            pathType: Prefix
            backend:
              service:
                name: warehouse-service-sv
                port:
                  number: 80
