kuber/IngressPublic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress-public
  namespace: otus-hw8
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth/register
            pathType: Prefix
            backend:
              service:
                name: auth-service-sv
                port:
                  number: 80
          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: auth-service-sv
                port:
                  number: 80
